# Carbon-Aware-Trainer

./: .dockerignore  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_IMPLEMENTATION_REPORT.md  AUTONOMOUS_SDLC_RESEARCH_BREAKTHROUGH.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  Dockerfile  IMPLEMENTATION_COMPLETE_REPORT.md  IMPLEMENTATION_REPORT.md  OPTIONAL_DEPENDENCIES_REPORT.md  PRODUCTION_ROBUSTNESS_REPORT.md  README.md  RESEARCH_DOCUMENTATION.md  RESEARCH_PUBLICATION_MATERIALS.md  ROBUSTNESS_IMPLEMENTATION_SUMMARY.md  api_service.py  autonomous_production_deployment.py  autonomous_quality_gates.py  autoscaling.yaml  carbon_intelligence.py  carbon_optimization.yaml  carbon_trainer_rules.yml  database_schema.sql  deployment_report_20250816_144839.json  disaster_recovery.md  global_deployment.yaml  grafana_dashboard.json  haproxy.cfg  health_validation.sh  infrastructure.tf  k8s-deployment.yaml  migrate_database.sh  monitoring_health.py  nginx.conf  production_benchmark_suite.py  production_config.py  prometheus.yml  pyproject.toml  quality_gate_report.json  (+19 more)
benchmark_results/: production_benchmark_20250815_080135.json
carbon_env/: pyvenv.cfg
carbon_venv/: pyvenv.cfg
deployment/: docker-compose.yml
deployment/docker/: Dockerfile
deployment/kubernetes/: carbon-trainer-deployment.yaml
examples/: advanced_auto_scaling_demo.py  advanced_carbon_training.py  comprehensive_sdlc_demo.py  generation1_advanced_demo.py  generation2_robustness_demo.py  generation3_scaling_demo.py  production_robustness_demo.py  research_validation_example.py  simple_pytorch_training.py
research_validation_results/: accuracy_benchmark_20250808_205533.csv  accuracy_benchmark_20250808_205533.json  accuracy_benchmark_statistical_tests_20250808_205533.json  benchmark_results_20250812_233745.csv  benchmark_results_20250812_233745.json  comprehensive_benchmark_20250808_205533.json  novel_algorithms_validation_20250815_075931.json  performance_report.md  research_summary_20250808_205533.md  research_summary_20250812_233745.md  research_summary_20250815_075931.md  statistical_analysis_20250812_233745.json
sample_data/: sample_carbon_data.json
src/carbon_aware_trainer/: __init__.py  cli.py
src/carbon_aware_trainer/carbon_models/: __init__.py  base.py  cached.py  electricitymap.py  watttime.py
src/carbon_aware_trainer/core/: __init__.py  advanced_forecasting.py  alerting.py  api_manager.py  auto_scaling.py  backup_fallback.py  cache.py  circuit_breaker.py  comprehensive_validation.py  concurrent_engine.py  config.py  health.py  (+27 more)
tests/: __init__.py  comprehensive_integration_tests.py  conftest.py
tests/integration/: test_end_to_end.py  test_performance.py
tests/research/: __init__.py  test_advanced_forecasting.py  test_dynamic_optimization.py  test_experimental_benchmarks.py  test_experimental_framework.py  test_federated_learning.py
tests/scaling/: __init__.py  test_auto_scaler.py
tests/unit/: test_cache.py  test_integrations.py  test_monitor.py  test_optimization.py  test_scaling.py  test_scheduler.py
(+32 files in other folders)
